deployment/artist-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: artist-service
  name: artist-service
spec:
  containers:
    - image: artist-service
      name: artist-service
      ports:
        - containerPort: 80
      resources: {}
  restartPolicy: OnFailure
status: {}
