deployment/music-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: music-service
  name: music-service
spec:
  containers:
  - env:
    - name: AWS_ACCESS_KEY_ID
      value: ASIAWSSDDKFSDL5W434S
    - name: AWS_SECRET_ACCESS_KEY
      value: 2qxs/HkyF2akDaG8kK/TybwxiVLcAabRcNBmLPPF
    - name: AWS_SESSION_TOKEN
      value: IQoJb3JpZ2luX2VjEFAaCXVzLXdlc3QtMiJHMEUCIQC4QOkNnhYNtfZkp+m+ODh/KF4MGzuhyZr91rKtut6jeQIgT37E9p45Mwy20EpzHkPLydzAORM2Du/t3XNYNaO6z/gqwAIIuf//////////ARAAGgw0NTIxODYwMzQ1MzIiDNCbSxYtpS3MVK2/0iqUAjsHb1tuMXBfvcHFElSIdws+wrbBN4XvVTdTqWfeFWmCBvBgJhGT7jgB53PjxNBS3LO0hMFez1Psh415Fsj5o/YCSfk55LIMrf8QQE9PZw2vy+CIAlhmwm/B9PAIPqidy3TQ2eh1avAE78n5iU8/IK46xGZVg89A5bn9WKyXH/r5M9PlkZ4ZrxMZ4fc071Z2Xc7lPxYO6DUen2+FTFqimrMkqwKlR3nbIFBeRNEdzh+0GJKc+a6LdldSH/phvwBUEbpFsSH3uSEfQVY2AMxXmrGnMiYBSZ6gW0G1LpX [...]
    image: hardhub_music-service:latest
    name: music-service
    ports:
    - containerPort: 80
    resources: {}
    imagePullPolicy: IfNotPresent
  restartPolicy: OnFailure
status: {}
