deployment/music-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: music-service
    labels:
        app: music-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: music-service
    template:
        metadata:
            labels:
                app: music-service
        spec:
            containers:
            - name: music-service
              image: docker.pkg.github.com/rickverkuijlen/hardhub/hardhub_music-service:v1
              # imagePullPolicy: Never
              ports:
              - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: music-service
spec:
  selector:
    app: music-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
