deployment/playlist-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: playlist-service
  name: playlist-service
spec:
  ports:
  - name: "8083"
    port: 8083
    targetPort: 80
  selector:
    io.kompose.service: playlist-service
status:
  loadBalancer: {}
